--- a/package.json
+++ b/package.json
@@ -64,11 +64,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/gremlin": "^3.6.7",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitest/ui": "^3.2.4",
+    "better-sqlite3": "^12.2.0",
     "dotenv-flow": "^4.1.0",
     "esbuild-plugin-tsc": "^0.5.0",
     "eslint": "^9.24.0",
